--- a/ios/Wayfinding/Info.plist
+++ b/ios/Wayfinding/Info.plist
@@ -38,7 +38,12 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>We'll show you things near you in the app.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We'll show you things near you in the app. With "always" access, we'll
+        also send you notifications when you're near something interesting.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>We use Bluetooth beacons for better location accuracy indoors.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
