--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@estimote/react-native-proximity": "^0.6.0",
     "react": "16.9.0",
     "react-native": "0.61.2"
   },
