--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Wayfinding",
+  "name": "com.boisestate.wayfinding",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,15 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-<<<<<<< Updated upstream
-=======
     "@react-native-community/async-storage": "^1.6.3",
     "AsyncStorage": "^0.1.5",
->>>>>>> Stashed changes
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-picker-select": "^6.3.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.7",
     "react-native-vector-icons": "^6.6.0",
